# realidad-aumentada

./: CMakeLists.txt  ejemplo.cpp
aruco-1.3.0/: CMakeLists.txt
aruco-1.3.0/src/: CMakeLists.txt
aruco-1.3.0/utils/: CMakeLists.txt  aruco_simple.cpp
aruco-1.3.0/utils_hrm/: CMakeLists.txt
